variable and data binding

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <h1>Hello Angular</h1>
-<table style="width: 100%;">
+<!-- <table style="width: 100%;">
   <tr>
     <td>
       <app-admin>
@@ -13,4 +13,5 @@
       </app-user>
     </td>
   </tr>
-</table>
+</table> -->
+<app-data-binding></app-data-binding>
