--- a/src/app/components/data-binding/data-binding.html
+++ b/src/app/components/data-binding/data-binding.html
@@ -34,3 +34,15 @@
 </table>
 
 {{isCourseActive ? 'Course is active' : 'Course is not active'}}
+
+<br>
+<hr>
+<!-- Event binding -->
+
+<button (click)="showAlert()">Show Alert</button>
+
+<select name="" id="" (change)="onOptionChange()">
+    <option value="1">Option 1</option>
+    <option value="2">Option 2</option>
+    <option value="3">Option 3</option>
+</select>
