--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,4 +14,5 @@
     </td>
   </tr>
 </table> -->
-<app-data-binding></app-data-binding>
+<!-- <app-data-binding></app-data-binding> -->
+<app-signal></app-signal>
