--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,4 +15,6 @@
   </tr>
 </table> -->
 <!-- <app-data-binding></app-data-binding> -->
-<app-signal></app-signal>
+<!-- <app-signal></app-signal> -->
+
+<app-control-flow></app-control-flow>
