--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,4 +17,5 @@
 <!-- <app-data-binding></app-data-binding> -->
 <!-- <app-signal></app-signal> -->
 
-<app-control-flow></app-control-flow>
+<!-- <app-control-flow></app-control-flow> -->
+<app-attribute></app-attribute>
