--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<h1>Hello Angular</h1>
+<!-- <h1>Hello Angular</h1> -->
 <!-- <table style="width: 100%;">
   <tr>
     <td>
@@ -18,4 +18,30 @@
 <!-- <app-signal></app-signal> -->
 
 <!-- <app-control-flow></app-control-flow> -->
-<app-attribute></app-attribute>
+<!-- <app-attribute></app-attribute> -->
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLinkActive="active" routerLink="/data-binding">Data Binding <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/controlflow">Control flow</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/attribute">Attribute</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+<router-outlet></router-outlet>
