--- a/src/app/app.html
+++ b/src/app/app.html
@@ -40,6 +40,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="/photos">Photos</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/user">User</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
