--- a/src/app/app.html
+++ b/src/app/app.html
@@ -46,6 +46,8 @@
       <li class="nav-item">
         <a class="nav-link" routerLinkActive="active" routerLink="/pipe">Pipe</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/add">Add</a>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
